--- a/locales/de.yml
+++ b/locales/de.yml
@@ -36,7 +36,7 @@ de:
          Lösungen in den Bereichen Social Media, Webanwendungen und Webseiten. Meine Schwerpunkte
          liegen auf Ruby on Rails, der Frontend Entwicklung
         (HTML5 CSS3/SASS, jQuery, Responsive Development), sowie Usability."
-    header_social_media: "Social Media"
+    header_social_media: "Links"
     header_customer: "Kunden"
     customer: "Zu meinen Kunden gehören kleinere und mittlere Unternehmen sowie Startups. 
                Für größere Unternehmen arbeite ich in der Regel im Agenturauftrag."
@@ -51,11 +51,12 @@ de:
     twitter: "Twitter"
   
   contact:
-    header_address:
-    address:
+    header_address: "Kontakt"
+    phone: "+49 151 22630332"
+    mail: "mail@ralph-moecklinghoff.de"
     header_where: "Wo ich arbeite"
-    where_1: "Je nach Anforderung arbeite ich beim Kunden vor Ort oder vom eigenen Büro aus. Häufig realisiere ich meine 
-              Projekte in Coworking Spaces, da ich die dortige kreative Atmosphäre sehr schätze."
+    where_1: "Je nach Anforderung arbeite ich beim Kunden vor Ort, oder im %{betahaus} einem Coworking Space im Hamburger Schanzenviertel. Hier habe ich eine produktive Umgebung mit Besprechungs- und Schulungsräumen. Der direkte Kontakt mit anderen innovativen Köpfen verschiedenster Fachrichtungen, sowie der Austausch mit den hier ansässigen Startups helfen mir beim Arbeiten und ermöglichen einen Bick über den Tellerrand hinaus. 
+"
     where_2: "Mehrere große Projekte habe ich in einem dezentral arbeitenden Team umgesetzt. Die dabei gewonnenen Erfahrungen 
               mit Cloud Systemen und netzbasierter Kommuniktion gebe ich gerne weiter."
     header_form: "ToDo"
