Media queries for the main pages

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -24,7 +24,7 @@ de:
                 Awesome Style Sheets), %{link_4} (HTML Abstraction Markup Language) und %{link_5}
                 (CSS Authoring Framework). Der Quellcode der Seite kann von %{link_6} herunter geladen werden."
     header_coworking: "Coworking"
-    coworking: "Ich arbeite mit einem freies Netz von Online-Experten im %{link} in Hamburgs Schanzenviertel. 
+    coworking: "Ich arbeite mit einem freies Netz von Online-Experten im %{link}, einem Coworking Space in Hamburgs Schanzenviertel. 
                Wir sind ein Team eingespielter Designer, Konzepter, Texter und Entwickler. Hier finden Sie das 
                richtige Team für Ihr Projekt."
     twitter: "Twitter"
