Fix for typo, styles for mobile menubar

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -84,8 +84,7 @@ de:
                 Schleswig-Holstein konfiguriert und folgt den geltenden Datenschutzbestimmungen."
   header:
     ralph: "ralph möcklinghoff"
-    home: "Home"
-    menu: "Menu"
+    menu: "Menü"
     about: "Über mich"
     work: "Arbeit"
     blog: "Blog"
