Styling for imprint page

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -70,7 +70,7 @@ de:
     
   imprint:
     header: "Verantwortlich i.S.d § 5 TMG / § 55 RStV"
-    vat: "Umsatzsteuer-Identifikationsnummer gem. § 27a UStG:"
+    vat: "Umsatzsteuer-Identifikationsnummer gem. § 27a UStG: DE256709442"
     analytics: "Diese Website benutzt %{link}, eine Open-Source-Software zur statistischen Auswertung der 
                 Besucherzugriffe. Piwik verwendet sog. “Cookies”, Textdateien, die auf Ihrem Computer 
                 gespeichert werden und die eine Analyse der Benutzung der Website durch Sie ermöglichen. 
