--- a/locales/de.yml
+++ b/locales/de.yml
@@ -61,7 +61,7 @@ de:
     phone: "(0151) 22630332"
     mail: "mail@ralph-moecklinghoff.de"
     header_where: "Wo ich arbeite"
-    where_1: "Je nach Anforderung arbeite ich beim Kunden vor Ort, oder im %{betahaus} einem Coworking Space im Hamburger Schanzenviertel. Hier habe ich eine produktive Umgebung mit Besprechungs- und Schulungsräumen. Der direkte Kontakt mit anderen innovativen Köpfen verschiedenster Fachrichtungen, sowie der Austausch mit den hier ansässigen Startups helfen mir beim Arbeiten und ermöglichen einen Bick über den Tellerrand hinaus. 
+    where_1: "Je nach Anforderung arbeite ich beim Kunden vor Ort, oder im %{betahaus} einem Coworking Space im Hamburger Schanzenviertel. Hier habe ich eine produktive Umgebung mit Besprechungs- und Schulungsräumen. Der direkte Kontakt mit anderen innovativen Köpfen verschiedenster Fachrichtungen, sowie der Austausch mit den hier ansässigen Startups helfen mir beim Arbeiten und ermöglichen einen Blick über den Tellerrand hinaus. 
 "
     where_2: "Mehrere große Projekte habe ich in einem dezentral arbeitenden Team umgesetzt. Die dabei gewonnenen Erfahrungen 
               mit Cloud Systemen und netzbasierter Kommuniktion gebe ich gerne weiter."
